--- a/sidebar_extension/manifest.json
+++ b/sidebar_extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Spacetime Studio Sidebar",
+  "name": "Spacetime Studio",
   "version": "0.1.0",
 
   "permissions": ["sidePanel"],
